files/opt/router/nftables/ip6tables.rules
# IPV6 FIREWALL RULES
# see http://ipset.netfilter.org/ip6tables.man.html
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -p udp --dport 53 -m set --match-set DNS-LOCAL-V6 src -j REDIRECT --to-port 53
-A PREROUTING -p tcp --dport 53 -m set --match-set DNS-LOCAL-V6 src -j REDIRECT --to-port 53
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:SERVICES - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -i ppp+ -s fe80::/10 -p udp -m udp --sport 547 --dport 546 -j ACCEPT
-A INPUT -i ppp+ -j SERVICES
-A INPUT -i ppp+ -j DROP
-A INPUT -i bell+ -j DROP
-A INPUT -i lan+ -j ACCEPT
-A INPUT -i lan+ -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i lan+ -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i lan+ -p udp -m udp --dport 547 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i tun+ -j ACCEPT
-A INPUT -j REJECT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state INVALID -j DROP
-A FORWARD -p ipv6-icmp -j ACCEPT
-A FORWARD -o lan+ -m set --match-set HOSTS-GLOBAL-V6 dst,dst -j ACCEPT
-A FORWARD -i ppp+ -j DROP
-A FORWARD -i bell+ -j DROP
-A FORWARD -o ppp+ -j ACCEPT
-A FORWARD -i tun+ -o lan0 -j ACCEPT
-A FORWARD -j REJECT
#-A SERVICES -p tcp -m tcp --dport 22 -j ACCEPT
#-A SERVICES -p udp -m udp --dport 1194 -j ACCEPT
COMMIT
