files/opt/router/nftables/iptables.rules
# IPV4 FIREWALL RULES
# see http://ipset.netfilter.org/iptables.man.html
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -p tcp --dport 21 -j CT --helper ftp
COMMIT
*mangle
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i bell_iptv -s 10.2.0.0/16 -d 239.0.0.0/8 -p udp -j DROP
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:DNATHOSTS - [0:0]
-A PREROUTING ! -d 10.2.0.0/16 -p udp --dport 53 -m set --match-set DNS-LOCAL-V4 src -j REDIRECT --to-port 53
-A PREROUTING ! -d 10.2.0.0/16 -p tcp --dport 53 -m set --match-set DNS-LOCAL-V4 src -j REDIRECT --to-port 53
-A PREROUTING -i ppp+ -j DNATHOSTS
-A POSTROUTING -o ppp+ -j MASQUERADE
-A POSTROUTING -o bell_iptv -j MASQUERADE
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:SERVICES - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -i bell_iptv -p igmp -j ACCEPT
-A INPUT -i bell_iptv -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A INPUT -i ppp+ -j SERVICES
-A INPUT -i ppp+ -j DROP
-A INPUT -i bell+ -j DROP
-A INPUT -i lan+ -j ACCEPT
-A INPUT -i lan+ -p udp --dport 67 -j ACCEPT
-A INPUT -i lan+ -p udp --dport 53 -j ACCEPT
-A INPUT -i lan+ -p tcp --dport 53 -j ACCEPT
-A INPUT -i lan+ -p icmp -j ACCEPT
-A INPUT -i lan+ -p igmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i tun+ -j ACCEPT
-A INPUT -j REJECT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state INVALID -j DROP
-A FORWARD -i bell_iptv -o lan_main -s 10.2.0.0/16 -d 239.0.0.0/8 -p udp -j ACCEPT
-A FORWARD -o lan+ -m set --match-set HOSTS-GLOBAL-V4 dst,dst -j ACCEPT
-A FORWARD -i ppp+ -j DROP
-A FORWARD -i bell+ -j DROP
-A FORWARD -o ppp+ -j ACCEPT
-A FORWARD -o bell_iptv -j ACCEPT
-A FORWARD -i tun+ -o lan0 -j ACCEPT
-A FORWARD -j REJECT
#-A SERVICES -p tcp --dport 22 -j ACCEPT
#-A SERVICES -p udp --dport 1194 -j ACCEPT
COMMIT
